syntax = "proto3";

import "nanopb.proto";
import "validate.proto";

// Test message with mixed validated and non-validated fields
message TestMessage {
    // Field with validation constraints
    string name = 1 [
        (validate.rules).string.min_len = 1,
        (validate.rules).string.max_len = 50,
        (nanopb).max_size = 51
    ];
    
    // Field WITHOUT validation constraints
    string description = 2 [(nanopb).max_size = 200];
    
    // Field with validation constraints
    int32 age = 3 [
        (validate.rules).int32.gte = 0,
        (validate.rules).int32.lte = 150
    ];
    
    // Field WITHOUT validation constraints
    int32 count = 4;
    
    // Field WITHOUT validation constraints
    bool active = 5;
}
